finish backend except notification
- abandon the design of product comment reply to another comment

[ ] the bulletin hasn't been designed fully

--- a/flea_market_project/pom.xml
+++ b/flea_market_project/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>mariadb-java-client</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/com.google.code.findbugs/jsr305 -->
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
