--- a/flea_market_project/src/test/resources/application.properties
+++ b/flea_market_project/src/test/resources/application.properties
@@ -1,3 +1,13 @@
+#server.port=8080
+#
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:myDb;DB_CLOSE_DELAY=-1
+#
+#spring.jpa.open-in-view=true
+#spring.jpa.show-sql=false
+#spring.jpa.hibernate.ddl-auto=create
+
+
 server.port=8080
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
@@ -9,4 +19,4 @@ spring.datasource.data=classpath:data.sql
 
 spring.jpa.open-in-view=true
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
