rename ProductEntity property 'releaseTime' to 'publishTime'

--- a/flea_market_project/pom.xml
+++ b/flea_market_project/pom.xml
@@ -19,10 +19,22 @@
         <maven.compiler.target>13</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-<!--        <start-class></start-class>-->
+        <start-class>application.MainApplication</start-class>
     </properties>
 
     <packaging>war</packaging>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>application.MainApplication</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <dependency>
