--- a/flea_market_project/src/main/resources/application.properties
+++ b/flea_market_project/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.datasource.password=flea
 spring.datasource.initialization-mode=always
 spring.datasource.data=classpath:data.sql
 
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
 spring.jpa.open-in-view=true
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
